# Learn

./: .clang-format  .gitignore  AGENTS.md  AGENTS_A.md  AGENTS_B.md  AGENTS_C.md  AGENTS_D.md  AI_Era_CPP_Mastery_Plan.md  CMakeLists.txt  CMakePresets.json  HOW_TO_USE_AGENTS.md  benchmark_result.txt  task.md
Learn/plans/year1/: month-02.md  month-03.md  month-04.md  month-05.md
src/: main.cpp
src/coroutine/: 01_generator.cpp  02_lazy_task.cpp  03_awaiter.cpp  Day4_5_Plan.md  day4_examples.h
src/thread_pool/: Day1_Plan.md  Day1_Summary.md  Day2_3_Plan.md  Day2_3_Summary.md  coro_warmup.h  fast_test.h  thread_pool.cpp  thread_pool.h  thread_pool_fast.cpp  thread_pool_fast.h  thread_pool_priority.cpp  thread_pool_priority.h
